Somewhat fixes the mobile image from not displaying properly on mobile

--- a/styles/components/BookFeature.module.scss
+++ b/styles/components/BookFeature.module.scss
@@ -39,4 +39,9 @@
   z-index: 12;
   width: 100%;
   height: 600px;
+  overflow: hidden;
+
+  img {
+    object-fit: cover;
+  }
 }
